[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/ExitButton.gd" type="Script" id=1]
[ext_resource path="res://GUI/PlanetSettingsPanel.gd" type="Script" id=2]

[node name="PlanetSettingsPanel" type="Control"]
margin_right = 341.0
margin_bottom = 169.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/MarginContainer"]
margin_right = 321.0
margin_bottom = 149.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer2" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer"]
margin_right = 321.0
margin_bottom = 20.0
split_offset = 208
dragger_visibility = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer/HSplitContainer2"]
margin_top = 3.0
margin_right = 289.0
margin_bottom = 17.0
text = "Planet Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VSplitContainer/HSplitContainer2"]
margin_left = 301.0
margin_right = 321.0
margin_bottom = 20.0
text = "X"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
parentsToClimb = 5

[node name="Tabs" type="MarginContainer" parent="Panel/MarginContainer/VSplitContainer"]
margin_top = 32.0
margin_right = 321.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs"]
margin_right = 321.0
margin_bottom = 117.0

[node name="Sliders" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height Slider" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer"]
margin_right = 313.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Height Slider"]
margin_top = 1.0
margin_right = 46.0
margin_bottom = 15.0
text = "Height:"

[node name="HeightSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Height Slider"]
margin_left = 58.0
margin_right = 313.0
margin_bottom = 16.0
max_value = 1.0
step = 0.01
value = 0.6

[node name="Water Slider" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer"]
margin_top = 20.0
margin_right = 313.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Water Slider"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "Water:"

[node name="WaterSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Water Slider"]
margin_left = 54.0
margin_right = 313.0
margin_bottom = 16.0
max_value = 1.0
step = 0.01

[node name="Mountain Slider" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer"]
margin_top = 40.0
margin_right = 313.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Mountain Slider"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
text = "Mountain"

[node name="MountainSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Mountain Slider"]
margin_left = 72.0
margin_right = 313.0
margin_bottom = 16.0
max_value = 1.0
step = 0.01

[node name="Snow Slider" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer"]
margin_top = 60.0
margin_right = 313.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Snow Slider"]
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
text = "Snow:"

[node name="SnowSlider" type="HSlider" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Snow Slider"]
margin_left = 49.0
margin_right = 313.0
margin_bottom = 16.0
max_value = 1.0
step = 0.01

[node name="Colors" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ColorPicker" type="ColorPicker" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors/TabContainer/Ground"]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 466.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Mountain" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Snow" type="Tabs" parent="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Colors/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Height Slider/HeightSlider" to="." method="_on_HeightSlider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Water Slider/WaterSlider" to="." method="_on_WaterSlider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Mountain Slider/MountainSlider" to="." method="_on_MountainSlider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VSplitContainer/Tabs/TabContainer/Sliders/VBoxContainer/Snow Slider/SnowSlider" to="." method="_on_SnowSlider_value_changed"]
